# chip8-rs

./: Cargo.toml  README.md
roms/: README.md  blank.rom
src/: asm-main.rs  constants.rs  decoder.rs  emulator-main.rs  lib.rs  state.rs  term.rs
