[package]
name = "chip8-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
env_logger = "^0.11"
log = "^0.4"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[[bin]]
name = "chip8"
path = "src/main.rs"

[package.metadata.cross.build]
xargo = false
