[package]
name = "chip8-rs"
version = "0.1.0"
edition = "2024"
default-run = "chip8"
authors = ["Mads Hvelplund <mhvelplund@gmail.com>"]

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
env_logger = "^0.11"
log = "^0.4"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[[bin]]
name = "chip8"
path = "src/emulator-main.rs"

[[bin]]
name = "chip8-asm"
path = "src/asm-main.rs"

[package.metadata.cross.build]
xargo = false
